# wgcCaptureForElectron

./: README.md  glfwExample.slnx
capture/: README.md  electron-builder.yml  jsconfig.json  package.json  pnpm-lock.yaml
capture/native/wgc-addon/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  capture_addon.exp  capture_addon.lib  capture_addon.node  cmake_install.cmake
capture/scripts/: cmake-build-addon.mjs  electron-test-native.cjs
capture/src/main/: index.js
capture/src/preload/: index.js
capture/src/renderer/src/: App.vue  global.d.ts  main.js
capture/src/renderer/src/assets/: main.css
capture/src/renderer/src/components/capture/: CapturePreviewPanel.vue  CaptureSettingsPanel.vue  CaptureSidebar.vue
capture/src/renderer/src/components/chrome/: WindowTopBar.vue
capture/src/renderer/src/stores/: captureRecorder.js
capture/src/renderer/src/themes/: captureGrayscalePreset.js
glfwExample/: CMakeLists.txt  WasapiLoopback.cpp  addon.cpp  audio_output_devices.cpp  audio_output_devices.h  glfwExample.vcxproj  glfwExample.vcxproj.filters  logger.h  main.cpp  main_n.cpp  media_recorder.h  package.json  pnpm-lock.yaml  screen_capture.h  test.js  winrt_c.h
glfwExample/tests/: mf_recording_smoke.cpp
glfwExample/utils/: pixel_format.hpp
